src/snapshots/glass__codegen__tests__fn test() -> Int { let x: Int = 5 x }.snap
---
source: src/codegen.rs
expression: compile(source)
---
function glass_dispatch_void takes integer glass_closure returns integer
    return 0
endfunction

function glass_i2b takes integer i returns boolean
    return i != 0
endfunction

function glass_test takes nothing returns integer
    local integer x
    set x = 5
    return x
endfunction
