src/snapshots/glass__codegen__tests__lambda_no_capture.snap
---
source: src/codegen.rs
expression: "compile(\"fn test() -> Int { fn(x: Int) { x + 1 } }\")"
---
function glass_lambda_0 takes integer glass_clos_id, integer x returns integer
    return (x + 1)
endfunction

function glass_dispatch_0 takes integer glass_closure returns integer
    local integer glass_tag = glass_closure / 8192
    local integer glass_cid = glass_closure - glass_tag * 8192
    return 0
endfunction

function glass_dispatch_1 takes integer glass_closure, integer glass_p0 returns integer
    local integer glass_tag = glass_closure / 8192
    local integer glass_cid = glass_closure - glass_tag * 8192
    if glass_tag == 0 then
        return glass_lambda_0(glass_cid, glass_p0)
    endif
    return 0
endfunction

function glass_dispatch_2 takes integer glass_closure, integer glass_p0, integer glass_p1 returns integer
    local integer glass_tag = glass_closure / 8192
    local integer glass_cid = glass_closure - glass_tag * 8192
    return 0
endfunction

function glass_dispatch_void takes integer glass_closure returns integer
    return glass_dispatch_0(glass_closure)
endfunction

function glass_test takes nothing returns integer
    local integer glass_tmp_0
    return (0 * 8192)
endfunction
