src/snapshots/glass__codegen__tests__list_literal.snap
---
source: src/codegen.rs
expression: "compile(\"fn nums() -> Int { [1, 2, 3] }\")"
---
globals
    // Linked list: List_integer
    integer array glass_List_integer_head
    integer array glass_List_integer_tail
    integer array glass_List_integer_free
    integer glass_List_integer_free_top = 0
    integer glass_List_integer_count = 0
endglobals

function glass_List_integer_alloc takes nothing returns integer
    local integer id
    if glass_List_integer_free_top > 0 then
        set glass_List_integer_free_top = glass_List_integer_free_top - 1
        set id = glass_List_integer_free[glass_List_integer_free_top]
    else
        set glass_List_integer_count = glass_List_integer_count + 1
        set id = glass_List_integer_count
    endif
    return id
endfunction

function glass_List_integer_dealloc takes integer id returns nothing
    set glass_List_integer_free[glass_List_integer_free_top] = id
    set glass_List_integer_free_top = glass_List_integer_free_top + 1
endfunction

function glass_List_integer_cons takes integer head, integer tail returns integer
    local integer id = glass_List_integer_alloc()
    set glass_List_integer_head[id] = head
    set glass_List_integer_tail[id] = tail
    return id
endfunction

function glass_dispatch_void takes integer glass_closure returns integer
    return 0
endfunction

function glass_nums takes nothing returns integer
    return glass_List_integer_cons(1, glass_List_integer_cons(2, glass_List_integer_cons(3, -1)))
endfunction
