src/snapshots/glass__codegen__tests__list_with_type_def.snap
---
source: src/codegen.rs
expression: "compile(r#\"\npub type Model { Model { wave: Int } }\nfn test() -> Int { [1, 2, 3] }\n\"#)"
---
globals
    // SoA arrays for type Model
    integer array glass_Model_Model_wave
    integer array glass_Model_free
    integer glass_Model_free_top = 0
    integer glass_Model_count = 0
    // Linked list: List_integer
    integer array glass_List_integer_head
    integer array glass_List_integer_tail
    integer array glass_List_integer_free
    integer glass_List_integer_free_top = 0
    integer glass_List_integer_count = 0
endglobals

function glass_Model_alloc takes nothing returns integer
    local integer id
    if glass_Model_free_top > 0 then
        set glass_Model_free_top = glass_Model_free_top - 1
        set id = glass_Model_free[glass_Model_free_top]
    else
        set glass_Model_count = glass_Model_count + 1
        set id = glass_Model_count
    endif
    return id
endfunction

function glass_Model_dealloc takes integer id returns nothing
    set glass_Model_free[glass_Model_free_top] = id
    set glass_Model_free_top = glass_Model_free_top + 1
endfunction

function glass_new_Model takes integer p_wave returns integer
    local integer id = glass_Model_alloc()
    set glass_Model_Model_wave [id] = p_wave
    return id
endfunction

function glass_get_Model_Model_wave takes integer id returns integer
    return glass_Model_Model_wave [id]
endfunction

function glass_List_integer_alloc takes nothing returns integer
    local integer id
    if glass_List_integer_free_top > 0 then
        set glass_List_integer_free_top = glass_List_integer_free_top - 1
        set id = glass_List_integer_free[glass_List_integer_free_top]
    else
        set glass_List_integer_count = glass_List_integer_count + 1
        set id = glass_List_integer_count
    endif
    return id
endfunction

function glass_List_integer_dealloc takes integer id returns nothing
    set glass_List_integer_free[glass_List_integer_free_top] = id
    set glass_List_integer_free_top = glass_List_integer_free_top + 1
endfunction

function glass_List_integer_cons takes integer head, integer tail returns integer
    local integer id = glass_List_integer_alloc()
    set glass_List_integer_head[id] = head
    set glass_List_integer_tail[id] = tail
    return id
endfunction

function glass_dispatch_void takes integer glass_closure returns integer
    return 0
endfunction

function glass_test takes nothing returns integer
    return glass_List_integer_cons(1, glass_List_integer_cons(2, glass_List_integer_cons(3, -1)))
endfunction
